--- a/TraceKey.cbp
+++ b/TraceKey.cbp
@@ -32,6 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Helper.h" />
+		<Unit filename="KeyConstants.h" />
+		<Unit filename="base64.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
