--- a/TraceKey.cbp
+++ b/TraceKey.cbp
@@ -35,6 +35,7 @@
 		<Unit filename="Helper.h" />
 		<Unit filename="IO.h" />
 		<Unit filename="KeyConstants.h" />
+		<Unit filename="SendMail.h" />
 		<Unit filename="Timer.h" />
 		<Unit filename="base64.h" />
 		<Unit filename="main.cpp" />
